--- a/blog/templates/blog/login.html
+++ b/blog/templates/blog/login.html
@@ -15,6 +15,9 @@
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Check me out</label>
     </div>
+    <a href="/forgot_password">Forgot Password</a>
+    <br>
+    <br>
     <button type="submit" class="btn btn-primary">Submit</button>
 
     {% if messages %}
@@ -24,6 +27,5 @@
         {% endfor %}
     </ul>
     {% endif %}
-
 </form>
 {% endblock %}
