--- a/blog/templates/blog/forgot_password.html
+++ b/blog/templates/blog/forgot_password.html
@@ -12,7 +12,7 @@
             {% csrf_token %}
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="usernameHelp" name="username" required>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" value="" required>
             </div>
             <button type="submit" class="btn btn-primary">Send email</button>
         </form>
