--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -34,17 +34,54 @@
           </form>
         </div>
         {% for post in posts%}
+        <br>
         <div class="card w-50">
           <div class="card-body">
             <h5 class="card-title">{{post.title}}</h5>
             <p class="card-text">{{post.posted_by}}</p>
             <a href="{% url 'blog_detail' post.id%}" class="btn btn-primary">Read</a>
             <!-- <a href="/blog/{{ post.id }}" class="btn btn-primary">Read</a> -->
+            {% if post.posted_by.id == request.user.id %}
+            <a href="{% url 'edit_blog' post.id%}" class="btn btn-primary">Edit</a>
+            {% endif %}
           </div>
         </div>
         <br>
-        <br>
         {% endfor %}
+        <div class="row">
+          <div class="col-12">
+            <ul class="pagination">
+              {% if page_obj.has_previous %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                </li>
+              {% endif %}
+              {% for i in paginator.page_range %}
+                {% if page_obj.number == i %}
+                  <li class="page-item active">
+                  <span class="page-link">
+                    {{ i }}
+                    <span class="sr-only">(current)</span>
+                  </span>
+                  </li>
+                {% else %}
+                  <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                {% endif %}
+              {% endfor %}
+              {% if page_obj.has_next %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </li>
+              {% endif %}
+            </ul>
+          </div>
+        </div>        
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
