--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -48,41 +48,23 @@
         </div>
         <br>
         {% endfor %}
-        <div class="row">
-          <div class="col-12">
-            <ul class="pagination">
-              {% if page_obj.has_previous %}
-                <li class="page-item">
-                  <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                </li>
-              {% endif %}
-              {% for i in paginator.page_range %}
-                {% if page_obj.number == i %}
-                  <li class="page-item active">
-                  <span class="page-link">
-                    {{ i }}
-                    <span class="sr-only">(current)</span>
-                  </span>
-                  </li>
-                {% else %}
-                  <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                {% endif %}
-              {% endfor %}
-              {% if page_obj.has_next %}
-                <li class="page-item">
-                  <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
-                  </a>
-                </li>
-              {% endif %}
-            </ul>
-          </div>
-        </div>        
       </div>
+      <div class="pagination">
+          <span class="step_links">
+              {% if page_obj.has_previous %}
+                  <a href="?page=1">&laquo; First</a>
+                  <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+              {% endif %}
+              <span class="current">
+                  Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+              </span>
+              {% if page_obj.has_next %}
+                  <a href="?page={{ page_obj.next_page_number }}">Next</a>
+                  <a href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a>
+              {% endif %}
+          </span>
+      </div>
+      <br>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
